# caldav-mcp

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
.github/workflows/: ci.yml
docs/: README.md  apple-calendar.md  architecture.md  authentication.md  caldav-api.md  cli.md  configuration.md  database.md  flow.md  mcp-api.md
docs/images/: README.md
migrations/: 001_initial.sql
src/: config.rs  error.rs  main.rs
src/caldav/: auth.rs  delete.rs  get.rs  mkcalendar.rs  mod.rs  propfind.rs  proppatch.rs  put.rs  report.rs  wellknown.rs
src/caldav/xml/: mod.rs  multistatus.rs  parse.rs  properties.rs
src/db/: calendars.rs  events.rs  mod.rs  models.rs  shares.rs  tokens.rs  users.rs
src/ical/: builder.rs  parser.rs
src/mcp/: auth.rs  handlers.rs  jsonrpc.rs  mod.rs  session.rs  transport.rs
src/mcp/tools/: calendars.rs  events.rs  mod.rs  sharing.rs  simple.rs
