[package]
name = "caldav-server"
version = "0.1.0"
edition = "2024"
description = "A CalDAV server with MCP interface, written in Rust"

[dependencies]
# Web framework and async runtime
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1" }
http = "1"

# XML for WebDAV responses
quick-xml = { version = "0.37", features = ["serialize"] }

# iCalendar parsing and generation
icalendar = { version = "0.16", features = ["parser"] }

# Database (async SQLite)
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "chrono",
    "uuid",
] }

# Password hashing
argon2 = "0.5"
password-hash = "0.5"

# UUID generation
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Config
dotenvy = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

# Random for token generation
rand = "0.8"
base64 = "0.22"

# Headers
headers = "0.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
